--- a/ionic-app/vates/src/pages/login/login.scss
+++ b/ionic-app/vates/src/pages/login/login.scss
@@ -1,10 +1,95 @@
-page-login {
+@import url('https://fonts.googleapis.com/css?family=Oxygen:400,700');
 
-  ion-title{
-    text-align: center;
-  }
 
-  #loginButtons{
-    text-align: center;
-  }
+	page-login {
+
+	  ion-title{
+	    text-align: center;
+	  }
+
+	  #loginButtons{
+	    text-align: center;
+	    font-family:"oxygen",sans-serif;
+	    font-weight: bold;
+	    margin-bottom : 8px;
+	  }
+	  .overall{
+	  background:#ff7400;
+	  }
+	ion-card.card {
+		box-shadow: none;
+		background: rgba(0, 0, 0, 0.4);
+		border-radius: 5px;
+	}
+	ion-card-header.card-header {
+		color: #fff;
+		font-size:150%;
+	}
+	.item {
+		margin-bottom: 10px;
+		background: white;
+		border: medium none;
+    }
+    ion-item{
+    margin:20px;
+    }
+	    ion-card-header{
+	    text-align:center;
+	    font-family: "Oxygen", sans-serif;
+	    font-weight: bold;
+	    font-size: 2.2rem;
+    }
+    ion-icon{
+      text-align:center;
+    }
+	.center {
+	  display: -webkit-box;
+	  display: -moz-box;
+	  display: -ms-flexbox;
+	  display: -webkit-flex;
+	  display: flex;
+	  -webkit-box-direction: normal;
+	  -moz-box-direction: normal;
+	  -webkit-box-orient: horizontal;
+	  -moz-box-orient: horizontal;
+	  -webkit-flex-direction: row;
+	  -ms-flex-direction: row;
+	  flex-direction: row;
+	  -webkit-flex-wrap: nowrap;
+	  -ms-flex-wrap: nowrap;
+	  flex-wrap: nowrap;
+	  -webkit-box-pack: center;
+	  -moz-box-pack: center;
+	  -webkit-justify-content: center;
+	  -ms-flex-pack: center;
+	  justify-content: center;
+	  -webkit-align-content: stretch;
+	  -ms-flex-line-pack: stretch;
+	  align-content: stretch;
+	  -webkit-box-align: center;
+	  -moz-box-align: center;
+	  -webkit-align-items: center;
+	  -ms-flex-align: center;
+	  align-items: center;
+	}
+	body {
+	  background: #ff7400;
+	  color: #ff7400;
+	}
+	a {
+	  color:#ff7400;
+	}
+	p {
+	  padding: 3em 0;
+	}
+	.container {
+	  text-align:center;
+	  padding: 3em 0;
+	}
+	element.style {
+    height: 54px;
+}
+
+
+
 }
