--- a/ionic-app/vates/src/pages/signup/signup.scss
+++ b/ionic-app/vates/src/pages/signup/signup.scss
@@ -1,10 +1,40 @@
+@import url('https://fonts.googleapis.com/css?family=Oxygen:400,700');
 page-signup {
 
-  ion-title{
-    text-align: center;
-  }
+	  ion-title{
+	    text-align: center;
+	  }
 
-  #loginButtons{
-    text-align: center;
-  }
+	  #loginButtons{
+	    text-align: center;
+	    font-family:"oxygen",sans-serif;
+	    font-weight: bold;
+	    margin-bottom : 8px;
+	  }
+	  .overall{
+		background:#ff7400;
+
+	    }
+	  ion-card-header.card-header {
+		color: #fff;
+		font-size:150%;
+		}
+      ion-item{
+        margin:20px;
+        }
+	  ion-card-header{
+	    text-align:center;
+	    font-family: "Oxygen", sans-serif;
+	    font-weight: bold;
+	    font-size: 2.2rem;
+    }
+    .item {
+		margin-bottom: 10px;
+		background: white;
+		border: medium none;
+    }
+    element.style {
+        height: 54px;
+    }
+
 }
